Config 서버 적용, 설정 덮어쓰기 확인

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,22 @@
 spring:
+  profiles:
+    active: local
   application:
-    name: order-service
-server:
-  port: 19092
+    name: server
+  config:
+    import: "configserver:"
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-server
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
+
 eureka:
   client:
     service-url:
