--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
   application:
-    name: server
+    name: order-service
   config:
     import: "configserver:"
   cloud:
